# news-summarizer

./: DECISIONS.md  Dockerfile.airflow  Dockerfile.fastapi  ISSUES.md  README.md  airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt  simple_auth_manager_passwords.json.generated
.dvc/: config
.github/workflows/: ci.yml
api/: main.py
dags/: news_pipeline.py  news_pipeline.py.bak
data/: processed.dvc  raw.dvc
frontend/: Dockerfile  index.html  nginx.conf  script.js
src/: data_quality.py  fetch_news.py  summarize.py
tests/: test_api.py  test_data_quality.py  test_fetch_news.py  test_summarize.py
