[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-sqlite>=4.3.1",
    "dvc>=3.67.0",
    "fastapi>=0.117.1",
    "groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]
