[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-sqlite>=4.3.1",
    "apache-airflow-providers-standard>=1.12.2",
    "dvc[gdrive]>=3.67.0",
    "fastapi>=0.117.1",
    "groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
